[package]
name = "randomforest"
version = "0.1.8"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "Random forest regressor and classifier"
homepage = "https://github.com/sile/randomforest"
repository = "https://github.com/sile/randomforest"
readme = "README.md"
categories = ["science"]
license = "MIT"

[dependencies]
anyhow = "1.0.95"
byteorder = "1.5.0"
ordered-float = "4.6.0"
rand = "0.9.0"
rayon = "1.10.0"
thiserror = "2.0.11"
